NetBSD Problem Report #43998

From tron@zhadum.org.uk  Sun Oct 24 17:51:09 2010
Return-Path: <tron@zhadum.org.uk>
Received: from mail.netbsd.org (mail.netbsd.org [204.152.190.11])
	by www.NetBSD.org (Postfix) with ESMTP id 58DFD63BA4E
	for <gnats-bugs@gnats.NetBSD.org>; Sun, 24 Oct 2010 17:51:09 +0000 (UTC)
Message-Id: <20101024175102.3AE19FB5EC@lyssa.zhadum.org.uk>
Date: Sun, 24 Oct 2010 18:51:02 +0100 (BST)
From: tron@zhadum.org.uk
Reply-To: tron@zhadum.org.uk
To: gnats-bugs@gnats.NetBSD.org
Subject: libedit(?) broken for UTF-8 locales
X-Send-Pr-Version: 3.95

>Number:         43998
>Category:       lib
>Synopsis:       libedit(?) broken for UTF-8 locales
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    lib-bug-people
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Sun Oct 24 17:55:00 +0000 2010
>Closed-Date:    Thu Nov 04 06:28:51 +0000 2010
>Last-Modified:  Thu Nov 04 13:55:05 +0000 2010
>Originator:     tron@zhadum.org.uk
>Release:        NetBSD 5.99.39 2010-10-24 sources
>Organization:
Matthias Scheler                                  http://zhadum.org.uk/
>Environment:
System: NetBSD lyssa.zhadum.org.uk 5.99.39 NetBSD 5.99.39 (LYSSA) #0: Sun Oct 24 18:32:44 BST 2010 tron@lyssa.zhadum.org.uk:/src/sys/compile/LYSSA i386
Architecture: i386
Machine: i386
>Description:
Command history in both "/bin/sh" and "/usr/bin/ftp" is broken for me
with the UTF-8 locale I use by default.

>How-To-Repeat:
env LC_CTYPE=en_US.UTF-8 /usr/bin/ftp
help
<cursor up>

>Fix:
Not known.

>Release-Note:

>Audit-Trail:

State-Changed-From-To: open->closed
State-Changed-By: dholland@NetBSD.org
State-Changed-When: Thu, 04 Nov 2010 06:28:51 +0000
State-Changed-Why:
Duplicate of 44021 (q.v.)


From: "Christos Zoulas" <christos@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/43998 CVS commit: src/lib/libedit
Date: Thu, 4 Nov 2010 09:53:12 -0400

 Module Name:	src
 Committed By:	christos
 Date:		Thu Nov  4 13:53:12 UTC 2010

 Modified Files:
 	src/lib/libedit: eln.c

 Log Message:
 PR/43998, PR/44021: In narrow history emulation, don't treat UTF-8 character
 sets specially as far as history goes since we always need to do the conversion
 from narrow [history] to wide [editline].


 To generate a diff of this commit:
 cvs rdiff -u -r1.8 -r1.9 src/lib/libedit/eln.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.39 2013/11/01 18:47:49 spz Exp $
$NetBSD: gnats_config.sh,v 1.8 2006/05/07 09:23:38 tsutsui Exp $
Copyright © 1994-2007 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.