PR/43998, PR/44021: In narrow history emulation, don't treat UTF-8 character sets specially as far as history goes since we always need to do the conversion from narrow [history] to wide [editline].